@@ -2015,6 +2015,7 @@ emport.error.text.missing=Text renderer must have a ''{0}''. Valid values are {1
 emport.error.text.invalid=Text renderer has an invalid ''{0}'' value of ''{1}''. Valid values are {2}
 emport.error.missingObject=Missing ''{0}'' object
 emport.error.missingValue=Missing ''{0}'' value.
+emport.error.wrongDataType=Incorrect data type for value of ''{0}'' expecting type of {1}
 emport.error.missing=Missing ''{0}'' value. Valid values are {1}
 emport.error.invalid=Invalid ''{0}'' value of ''{1}''. Valid values are {2}
 emport.error.pointType.missing=Point type must have a ''{0}''. Valid values are {1}
